# railway-qa-agent

./: .env.example  .gitignore  README.md  TODO.md  docker-compose.yml
backend/: Dockerfile  alembic.ini  pyproject.toml
backend/alembic/: env.py
backend/app/: __init__.py  main.py
backend/app/api/: router.py
backend/app/api/routes/: chat.py  health.py  terminology.py
backend/app/core/: config.py
backend/app/db/: session.py
backend/app/models/: __init__.py  entities.py
backend/app/rag/: __init__.py  docx_loader.py  embedding.py  retriever.py  terminology_extractor.py  types.py  vector_store.py
backend/app/schemas/: __init__.py  chat.py  terminology.py
backend/app/services/: chat_service.py  language.py  llm_client.py  terminology_service.py
backend/scripts/: ingest_qdrant.py  ingest_terminology.py  preview_corpus.py
backend/tests/: test_docx_loader.py  test_language.py  test_terminology_extractor.py  test_terminology_service.py
docs/: tech-stack.md
frontend/: Dockerfile  index.html  package-lock.json  package.json  tsconfig.json
frontend/src/: main.ts  router.ts
frontend/src/api/: client.ts
frontend/src/components/: MessageBubble.vue
frontend/src/stores/: chat.ts
frontend/src/styles/: main.css
frontend/src/types/: chat.ts
frontend/src/views/: ChatView.vue
