[project]
name = "railway-qa-agent-backend"
version = "0.1.0"
description = "FastAPI backend for a bilingual railway RAG assistant"
requires-python = ">=3.11"
dependencies = [
    "alembic>=1.16.0",
    "asyncpg>=0.30.0",
    "fastapi>=0.115.0",
    "httpx>=0.28.0",
    "orjson>=3.10.0",
    "pydantic>=2.10.0",
    "pydantic-settings>=2.8.0",
    "python-docx>=1.2.0",
    "python-dotenv>=1.1.0",
    "qdrant-client>=1.14.0",
    "sqlalchemy[asyncio]>=2.0.40",
    "uvicorn[standard]>=0.34.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.3.0",
    "pytest-asyncio>=0.26.0",
    "ruff>=0.11.0",
]
rag = [
    "sentence-transformers>=3.3.0",
]

[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["app*"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
